# terraria-editor-3ds

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  buildlaunch.sh  savefile-format-info.txt
assets/: 0_andy_48.ora  1.p  inventory.t3s  items.txt  modifiers.txt  pngcrop.py  restore.t3s  sprites.t3s  trash.t3s
assets/Items/: items.t3s  items.t3sb
assets/buttons/back/: back.t3s
assets/buttons/coin/: coin.t3s
assets/buttons/restore/: restore.t3s
assets/buttons/standard/: standard.t3s
assets/font/: font.t3s
assets/items/: items.t3s  items1.t3s  items2.t3s  items3.t3s
cia/: cia.rsf
fontmaking/: make.py
src/: app.h  backup.cpp  backup.h  gfx.cpp  gfx.h  items.cpp  items.h  keyboard.cpp  keyboard.h  main.cpp  pad.cpp  pad.h  savefile.cpp  savefile.h  scene.cpp  scene.h  uibutton.cpp  uibutton.h
src/fslib/: File.cpp
src/scenes/: disclamer.cpp  disclamer.h  fileselection.cpp  fileselection.h  inventory.cpp  inventory.h  restorescene.cpp  restorescene.h  saving.cpp  saving.h
tertexpng/: Terraria.pck  copy_items.py  extract  extract_rects.cpp  extract_sprites.py  imagasdad.txt  verify_and_validate_items.py
